welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:4: error: value =+ is not a member of Int
    m=+nums(i)
     ^