welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var m:Int=0
  for (i<- 0 to nums.length -1) {
    m=+nums(i)
  }
  return m/nums.length
}